--- a/src/main/resources/templates/admin/trip/trip-details.html
+++ b/src/main/resources/templates/admin/trip/trip-details.html
@@ -46,6 +46,7 @@
       <p><strong>Место назначения:</strong> <span th:text="${trip.destinationLocation}"></span></p>
       <p><strong>Дата и время отправления:</strong> <span th:text="${#temporals.format(trip.departureDatetime, 'dd.MM.yyyy HH:mm')}"></span></p>
       <p><strong>Дата и время прибытия:</strong> <span th:text="${#temporals.format(trip.arrivalDatetime, 'dd.MM.yyyy HH:mm')}"></span></p>
+      <p><strong>Цена:</strong> <span th:text="${trip.price}"></span></p>
       <p><strong>Транспортное средство:</strong> <span th:text="${trip.vehicle.vehicleType}"></span></p>
       <p><strong>Маршрут:</strong> <span th:text="${trip.route.startLocation} + ' - ' + ${trip.route.endLocation}"></span></p>
     </div>
