--- a/src/main/resources/templates/admin/schedule/schedule-details.html
+++ b/src/main/resources/templates/admin/schedule/schedule-details.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Детали расписания</title>
+  <title>Информация о расписании</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <style>
     body {
