--- a/src/main/resources/templates/admin/trip/trip-edit.html
+++ b/src/main/resources/templates/admin/trip/trip-edit.html
@@ -37,8 +37,8 @@
     </div>
 
     <div class="form-group">
-      <label for="occupied_seats">Занятые места</label>
-      <input type="text" class="form-control" id="occupied_seats" th:field="*{occupied_seats}" required>
+      <label for="occupiedSeats">Занятые места</label>
+      <input type="text" class="form-control" id="occupiedSeats" th:field="*{occupiedSeats}" required>
     </div>
 
     <div class="form-group">
@@ -54,7 +54,7 @@
     <div class="form-group">
       <label for="vehicle">Транспортное средство</label>
       <select class="form-control" id="vehicle" th:field="*{vehicle.id}" required>
-        <option th:each="vehicle : ${vehicles}" th:value="${vehicle.id}" th:text="${vehicle.vehicleType}"></option>
+        <option th:each="vehicle : ${vehicles}" th:value="${vehicle.id}" th:text="${vehicle.vehicleNumber}"></option>
       </select>
     </div>
 
@@ -66,13 +66,10 @@
     </div>
 
     <div class="form-group">
-      <label for="route">Водитель</label>
+      <label for="driver">Водитель</label>
       <select class="form-control" id="driver" th:field="*{driver.id}" required>
-      <option th:each="driver : ${drivers}"
-              th:value="${driver.id}"
-              th:text="${driver.firstName + ' ' + driver.lastName}">
-      </option>
-    </select>
+        <option th:each="driver : ${drivers}" th:value="${driver.id}" th:text="${driver.firstName} + ' ' + ${driver.lastName}"></option>
+      </select>
     </div>
 
     <button type="submit" class="btn btn-success">Сохранить</button>
