--- a/src/main/resources/templates/user/ticket-confirmation.html
+++ b/src/main/resources/templates/user/ticket-confirmation.html
@@ -2,15 +2,23 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Ticket Confirmation</title>
-  <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" th:href="@{'/css/styles.css'}">
+  <link rel="stylesheet" type="text/css" th:href="@{'/css/user-profile.css'}">
 </head>
 <body>
-<div class="container ticket-confirmation">
+<div class="profile-container">
+<div class="tickets-container">
   <h1>Подтверждение билета</h1>
   <p>Ваш билет успешно куплен!</p>
-  <p>Билет ID: <span th:text="${ticket.id}"></span></p>
-  <p>Номер поездки: <span th:text="${ticket.trip.tripNumber}"></span></p>
+  <p>Номер рейса: <span th:text="${ticket.trip.tripNumber}"></span></p>
+  <p>Маршрут: <span th:text="${ticket.trip.route.startLocation} + ' → ' + ${ticket.trip.route.endLocation}"></span></p>
+  <p>Откуда: <span th:text="${ticket.trip.departureLocation}"></span></p>
+  <p>Куда: <span th:text="${ticket.trip.destinationLocation}"></span></p>
   <p>Цена: <span th:text="${ticket.price}"></span></p>
+  <p>Место: <span th:text="${ticket.trip.occupiedSeats}"></span></p>
+  <p>Дата и время отправления: <span th:text="${#temporals.format(ticket.trip.departureDatetime, 'dd-MM-yyyy HH:mm')}"></span></p>
+  <p>Дата и время прибытия: <span th:text="${#temporals.format(ticket.trip.arrivalDatetime, 'dd-MM-yyyy HH:mm')}"></span></p>
 
   <form th:action="@{/user/send-ticket}" method="post">
     <label for="email">Email:</label>
@@ -18,6 +26,8 @@
     <input type="hidden" name="ticketId" th:value="${ticket.id}">
     <button type="submit">Send Ticket</button>
   </form>
+  <a th:href="@{'/'}" class="back-button">Назад</a>
+</div>
 </div>
 </body>
 </html>
